hyprland: set monitor settings on startup

--- a/shared/.config/hypr/startup.conf
+++ b/shared/.config/hypr/startup.conf
@@ -6,22 +6,21 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 # disable middle click paste
 exec-once=wl-paste -p --watch wl-copy -pc
 
-# auth agent (for privilege escalation requests)
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
-# bluetooth le
 exec-once=sudo btmgmt le on
 exec-once=echo -e "select 58:6D:67:30:F6:91\npower off" | bluetoothctl
 
-# launch stuff
 exec-once=hyprpaper
 exec-once=hyprsunset
 exec-once=eww daemon
 exec-once=QT_QPA_PLATFORM=xcb albert 
 exec-once=solaar -w hide
 
+exec-once=xrandr --output DP-1 --primary
+exec-once=hyprctl keyword monitor "DP-1,3840x2160@120,0x0,1.2"
+exec-once=hyprctl keyword monitor "DP-2,2560x1440@144,auto-left,1"
+
 exec-once=~/.config/hypr/scripts/startup
 exec-once=~/.config/hypr/scripts/event-handlers
 
-exec-once=hyprctl keyword monitor "DP-1,3840x2160@120,0x0,1.2"
-exec-once=hyprctl keyword monitor "DP-2,2560x1440@144,auto-left,1"
