hyprland: monitors works again?

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -98,6 +98,16 @@ binde = $mod, Left, moveactive, -30 0
 binde = $mod, Up, moveactive, 0 -30
 binde = $mod, Down, moveactive, 0 30
 
+# Function keys
+bind = ,XF86AudioRaiseVolume, exec, volume up
+bind = ,XF86AudioLowerVolume, exec, volume down
+bind = ,XF86AudioMute, exec, volume mute
+bind = ,XF86AudioPlay, exec, playerctl play-pause
+
+bind=,XF86MonBrightnessUp,exec,   brightness up
+bind=,XF86MonBrightnessDown,exec, brightness down
+bind=SHIFT,XF86MonBrightnessUp,exec,   brightness temp-up
+bind=SHIFT,XF86MonBrightnessDown,exec, brightness temp-down
 
 # --------------
 # Mod space submap
@@ -147,13 +157,6 @@ bind=,Caps_Lock,submap,reset
 submap=reset
 
 
-# Function keys
-bind = ,XF86AudioRaiseVolume, exec, volume up
-bind = ,XF86AudioLowerVolume, exec, volume down
-bind = ,XF86AudioMute, exec, volume mute
-bind = ,XF86AudioPlay, exec, playerctl play-pause
-bind=,XF86MonBrightnessUp,exec,   brightness up
-bind=,XF86MonBrightnessDown,exec, brightness down
 
 # Mouse
 bindm = $mod, mouse:272, movewindow
