hyprland: use new window instead of new session on launching helium

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -7,7 +7,7 @@ bind = $mod,            x,      killactive,
 
 # open stuff
 bind = $mod,            $enter, exec,   ghostty
-bind = $mod,            b,      exec,   helium
+bind = $mod,            b,      exec,   helium --new-window
 bind = $mod SHIFT,      b,      exec,   zen
 bind = $mod SHIFT,      $enter, exec,   albert show && sleep 0.1 && hyprctl dispatch killactive && sleep 0.1 && albert show
 bind = $mod,            c,      exec,   [float; center; size 33% 70%]ghostty --initial-command="zsh -c 'nvim -c \"ChatOpen tmp.chat\"' && zsh"
